apps/uptime-kuma/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      nodeSelector:
        kubernetes.io/hostname: k3s-3
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:2.2.1
          ports:
            - name: uptime-kuma
              containerPort: 3001
          resources:
            requests:
              cpu: "150m"
              memory: "128Mi"
            limits:
              memory: "256Mi"
          volumeMounts:
            - name: uptime-kuma-data
              mountPath: /app/data
      volumes:
        - name: uptime-kuma-data
          persistentVolumeClaim:
            claimName: uptime-kuma-pvc
