apps/uptime-kuma/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: authelia-auth
          namespace: traefik
      services:
        - name: uptime-kuma
          port: 80
          namespace: uptime-kuma
  tls: {}
